hphp/test/zend/good/Zend/tests/try_finally_008.php.expectf

Fatal error: Cannot break/continue in %s/try_finally_008.php on line 7
